--- a/index.html
+++ b/index.html
@@ -38,28 +38,34 @@
             <h1 class="projects-heading">Projects</h1>  
             <div class="horizontal-line"></div>
             <div class="project-items">
+                <div class="project">
                     <img src="./images/pc-image.png" alt="pc-image" class="pc-image">
                     <h3>Project 1</h3>
-                
+                </div>
+                <div class="project">
                     <img src="./images/pc-image.png" alt="pc-image" class="pc-image">
                     <h3>Project 2</h3>
-
+                </div>
+                <div class="project">
                     <img src="./images/pc-image.png" alt="pc-image" class="pc-image">
                     <h3>Project 3</h3>
-               
+                </div>
+                <div class="project">
                     <img src="./images/pc-image.png" alt="pc-image" class="pc-image">
                     <h3>Project 4</h3>
+                </div>    
             </div>
         </div>
     </main>
 
-   <!--  <footer>
-        <h1>Contact Me</h1>
-        <ul>
-            <li><img src="./images/github.png" alt="github"></li>
-            <li><img src="./images/linkedin.png" alt="linkedin"></li>
-            <li><img src="./images/outlook.png" alt="outlook"></li>
+    <footer>
+        <h1 class="contact-me">Contact Me</h1>
+        <div class="horizontal-line"></div>
+        <ul class="socials-ul">
+            <li><img src="./images/github.png" alt="github" class="socials-img"></li>
+            <li><img src="./images/linkedin.png" alt="linkedin" class="socials-img"></li>
+            <li><img src="./images/outlook.png" alt="outlook" class="socials-img outlook"></li>
         </ul>
-    </footer> --> 
+    </footer>
 </body>
 </html>
