--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <footer>
         <h1 class="contact-me">Contact Me</h1>
-        <div class="horizontal-line"></div>
+        <div class="horizontal-line-contact"></div>
         <ul class="socials-ul">
             <li><img src="./images/github.png" alt="github" class="socials-img"></li>
             <li><img src="./images/linkedin.png" alt="linkedin" class="socials-img"></li>
