--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav-list-nav">
             <ul class="nav-list">
                 <li class="home">Home</li>
                 <li>Projects</li>
