--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li>Technologies</li>
                 <li>Contact</li>
             </ul>
+            <div><img src="./images/hambrger.png" alt="menu" class="menu"></div>
         </nav>
     </header>
 
